--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "next dev --webpack",
     "dev:turbo": "next dev",
-    "build": "prisma generate && next build --webpack",
-    "postinstall": "prisma generate",
+    "build": "prisma generate && node scripts/postinstall.js && next build --webpack",
+    "postinstall": "prisma generate && node scripts/postinstall.js",
     "start": "next start",
     "lint": "eslint",
     "db:seed": "tsx scripts/seed.ts"
