Add Vercel configuration and vercel-build script
- Add vercel.json for explicit build configuration
- Add vercel-build script for Vercel deployments
- Ensure Prisma client is generated before build
- Set function timeout to 10 seconds

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev:turbo": "next dev",
     "build": "prisma generate && node scripts/postinstall.js && next build --webpack",
     "postinstall": "prisma generate && node scripts/postinstall.js",
+    "vercel-build": "prisma generate && node scripts/postinstall.js && next build",
     "start": "next start",
     "lint": "eslint",
     "db:seed": "tsx scripts/seed.ts"
